versioned_docs/version-8.3/apis-tools/tasklist-api-rest/schemas/requests/variables-search-request.mdx
---
id: variables-search-request
title: VariablesSearchRequest
hide_table_of_contents: false
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";

export const Bullet = () => (
  <>
    <span
      style={{
        fontWeight: "normal",
        fontSize: ".5em",
        color: "var(--ifm-color-secondary-darkest)",
      }}
    >
      &nbsp;●&nbsp;
    </span>
  </>
);

export const SpecifiedBy = (props) => (
  <>
    Specification
    <a
      className="link"
      style={{ fontSize: "1.5em", paddingLeft: "4px" }}
      target="_blank"
      href={props.url}
      title={"Specified by " + props.url}
    >
      ⎘
    </a>
  </>
);

export const Badge = (props) => (
  <>
    <span class={"badge badge--" + props.class}>{props.text}</span>
  </>
);

VariablesSearchRequest - query object to search tasks variables by provided variable names.

<Tabs groupId="schema" defaultValue="schema" values={
[
{label:'Schema',value: 'schema'},
{label:'Example value',value: 'example'}
]
}>
<TabItem value='schema'>

```graphql
{
    "variableNames": [string]
}
```

</TabItem>

<TabItem value='example'>

```json
{
  "variableNames": ["string"]
}
```

</TabItem>
</Tabs>

### Fields

#### [<code style={{ fontWeight: 'normal' }}>VariablesSearchRequest.<b>variableNames</b></code>](#)<Bullet />`string` <Badge class="secondary" text="list"/>

> Name of variables to find

### Consumed by

[`Search task variables`](../../controllers/tasklist-api-rest-task-controller.md#search-task-variables) <Badge class="secondary" text="POST"/>
