versioned_docs/version-8.8/apis-tools/tasklist-api-rest/schemas/requests/variables-search-request.mdx
---
id: variables-search-request
title: VariablesSearchRequest
hide_table_of_contents: false
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";

export const Bullet = () => (
  <>
    <span
      style={{
        fontWeight: "normal",
        fontSize: ".5em",
        color: "var(--ifm-color-secondary-darkest)",
      }}
    >
      &nbsp;●&nbsp;
    </span>
  </>
);

export const SpecifiedBy = (props) => (
  <>
    Specification
    <a
      className="link"
      style={{ fontSize: "1.5em", paddingLeft: "4px" }}
      target="_blank"
      href={props.url}
      title={"Specified by " + props.url}
    >
      ⎘
    </a>
  </>
);

export const Badge = (props) => (
  <>
    <span class={"badge badge--" + props.class}>{props.text}</span>
  </>
);

VariablesSearchRequest - query object to search tasks variables by provided variable names.

<Tabs groupId="schema" defaultValue="schema" values={
[
{label:'Schema',value: 'schema'},
{label:'Example value',value: 'example'}
]
}>
<TabItem value='schema'>

```graphql
{
    "variableNames": [string]
}
```

</TabItem>

<TabItem value='example'>

```json
{
  "includeVariables": [
    {
      "name": "variable_name",
      "alwaysReturnFullValue": false
    }
  ]
}
```

</TabItem>
</Tabs>

### Fields

#### [<code style={{ fontWeight: 'normal' }}>VariablesSearchRequest.<b>variableNames</b></code>](#)<Bullet />`string` <Badge class="secondary" text="list"/>

> Name of variables to find.

#### [<code style={{ fontWeight: 'normal' }}>VariablesSearchRequest.<b>includeVariables</b></code>](#)<Bullet />[`IncludeVariable`](../models/include-variable.mdx) <Badge class="secondary" text="list"/>

> An array used to specify a list of the variables that should be included in the response.

### Notes

> `VariablesSearchRequest.variableNames` and `VariablesSearchRequest.includeVariables` cannot be used together in the same API request.

> It is recommended to use `VariablesSearchRequest.includeVariables`, as `VariablesSearchRequest.variableNames` will be deprecated in a future release.

### Consumed by

[`Search task variables`](../../controllers/tasklist-api-rest-task-controller.md#search-task-variables) <Badge class="secondary" text="POST"/>
